--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>Farhan Store</title>
     <link rel="stylesheet" href="style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    
   </head>
-  <body style="background-color: #fafafa">
+  <body style="background-color: #000">
     <div class="row m-2 gap-2">
       <!-- side-bar-start -->
       <div class="col-2 left-side">
-        <div class="mb-3" style="max-width: 540px; cursor: pointer;">
+        <div class="mb-3" style="max-width: 540px; cursor: pointer">
           <div class="row g-0 mt-2 ms-2">
             <div class="col-4">
               <img src="/assets/avatar.png" class="img-fluid rounded-start avatar" alt="avatar" />
@@ -27,11 +29,11 @@
         </div>
         <div class="row">
           <div class="col left-side-link-group">
-            <ul class="row me-3 mt-3 d-flex justify-content-start ">
+            <ul class="row me-3 mt-3 d-flex justify-content-start">
               <li class="left-side-link"><i class="fa fa-home me-2"></i>Dashboard</li>
               <li class="left-side-link"><i class="fa fa-clock-o me-2"></i>Activity</li>
-              <li class="left-side-link"><i class="fa fa-gear me-2"></i>Setting</li>
               <li class="left-side-link"><i class="fa fa-user me-2"></i>Profile</li>
+              <li class="left-side-link"><i class="fa fa-gear me-2"></i>Setting</li>
               <li class="left-side-link"><i class="fa fa-sign-out me-2"></i>Logout</li>
             </ul>
           </div>
@@ -47,25 +49,226 @@
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
               <div class="btn-search"><i class="fa fa-search"></i></div>
             </form>
-            <div class="row d-flex flex-row promo">
-              <div class="mt-3 ms-1 title">
-                <h4>Promotion</h4>
-              </div>
-              <div class="col promo-option">
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">Electronics</h5>
-                    <p class="card-text">Lorem, ipsum dolor.</p>
-                    <div class="btn-promo text-center">Go somewhere</div>
+            <!-- start-test -->
+            <div class="container horizontal-scrollable">
+              <div class="row d-flex justify-content-center row flex-row flex-nowrap scrolling-wrapper">
+                <div class="col-sm-3 mt-4 mb-3">
+                  <div class="card suggest-card card_red text-center">
+                    <div class="title">
+                      <!-- <i class="fa fa-paper-plane" aria-hidden="true"></i> -->
+                      <h2>Basic</h2>
+                    </div>
+                    <div class="price">
+                      <h4><sup>$</sup>25</h4>
+                    </div>
+                    <div class="option">
+                      <ul>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>10 GB Space</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>3 Domain Names</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>20 Emails Addresse</li>
+                        <li><i class="fa fa-times" aria-hidden="true"></i>Live Support</li>
+                      </ul>
+                    </div>
+                    <a href="#">Order Now</a>
+                  </div>
+                </div>
+                <div class="col-sm-3 mt-4 mb-3">
+                  <div class="card suggest-card card_violet text-center">
+                    <div class="title">
+                      <h2>Premium</h2>
+                    </div>
+                    <div class="price">
+                      <h4><sup>$</sup>25</h4>
+                    </div>
+                    <div class="option">
+                      <ul>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>10 GB Space</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>3 Domain Names</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>20 Emails Addresse</li>
+                        <li><i class="fa fa-times" aria-hidden="true"></i>Live Support</li>
+                      </ul>
+                    </div>
+                    <a href="#">Order Now</a>
+                  </div>
+                </div>
+                <div class="col-sm-3 mt-4 mb-3">
+                  <div class="card suggest-card card_own text-center">
+                    <div class="title">
+                      <h2>Premium</h2>
+                    </div>
+                    <div class="price">
+                      <h4><sup>$</sup>25</h4>
+                    </div>
+                    <div class="option">
+                      <ul>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>10 GB Space</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>3 Domain Names</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>20 Emails Addresse</li>
+                        <li><i class="fa fa-times" aria-hidden="true"></i>Live Support</li>
+                      </ul>
+                    </div>
+                    <a href="#">Order Now</a>
+                  </div>
+                </div>
+                <div class="col-sm-3 mt-4 mb-3">
+                  <div class="card suggest-card card_three text-center">
+                    <div class="title">
+                      <!-- <i class="fa fa-rocket" aria-hidden="true"></i> -->
+                      <h2>Standart</h2>
+                    </div>
+                    <div class="price">
+                      <h4><sup>$</sup>50</h4>
+                    </div>
+                    <div class="option">
+                      <ul>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>50 GB Space</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>5 Domain Names</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>20 Emails Addresse</li>
+                        <li><i class="fa fa-times" aria-hidden="true"></i>Live Support</li>
+                      </ul>
+                    </div>
+                    <a href="#">Order Now</a>
+                  </div>
+                </div>
+                <div class="col-sm-3 mt-4 mb-3">
+                  <div class="card suggest-card card_red text-center">
+                    <div class="title">
+                      <!-- <i class="fa fa-paper-plane" aria-hidden="true"></i> -->
+                      <h2>Basic</h2>
+                    </div>
+                    <div class="price">
+                      <h4><sup>$</sup>25</h4>
+                    </div>
+                    <div class="option">
+                      <ul>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>10 GB Space</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>3 Domain Names</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>20 Emails Addresse</li>
+                        <li><i class="fa fa-times" aria-hidden="true"></i>Live Support</li>
+                      </ul>
+                    </div>
+                    <a href="#">Order Now</a>
+                  </div>
+                </div>
+                <div class="col-sm-3 mt-4 mb-3">
+                  <div class="card suggest-card card_violet text-center">
+                    <div class="title">
+                      <h2>Premium</h2>
+                    </div>
+                    <div class="price">
+                      <h4><sup>$</sup>25</h4>
+                    </div>
+                    <div class="option">
+                      <ul>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>10 GB Space</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>3 Domain Names</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>20 Emails Addresse</li>
+                        <li><i class="fa fa-times" aria-hidden="true"></i>Live Support</li>
+                      </ul>
+                    </div>
+                    <a href="#">Order Now</a>
+                  </div>
+                </div>
+                <div class="col-sm-3 mt-4 mb-3">
+                  <div class="card suggest-card card_own text-center">
+                    <div class="title">
+                      <h2>Premium</h2>
+                    </div>
+                    <div class="price">
+                      <h4><sup>$</sup>25</h4>
+                    </div>
+                    <div class="option">
+                      <ul>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>10 GB Space</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>3 Domain Names</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>20 Emails Addresse</li>
+                        <li><i class="fa fa-times" aria-hidden="true"></i>Live Support</li>
+                      </ul>
+                    </div>
+                    <a href="#">Order Now</a>
+                  </div>
+                </div>
+                <div class="col-sm-3 mt-4 mb-3">
+                  <div class="card suggest-card card_three text-center">
+                    <div class="title">
+                      <!-- <i class="fa fa-rocket" aria-hidden="true"></i> -->
+                      <h2>Standart</h2>
+                    </div>
+                    <div class="price">
+                      <h4><sup>$</sup>50</h4>
+                    </div>
+                    <div class="option">
+                      <ul>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>50 GB Space</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>5 Domain Names</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>20 Emails Addresse</li>
+                        <li><i class="fa fa-times" aria-hidden="true"></i>Live Support</li>
+                      </ul>
+                    </div>
+                    <a href="#">Order Now</a>
                   </div>
                 </div>
               </div>
-              <div class="col promo-option">
-                <div class="card">
+            </div>
+            <!-- end-test -->
+          </div>
+        </div>
+      </div>
+      <!-- content-end -->
+
+      <!-- display-bar-start -->
+      <div class="col">
+        <div class="row d-flex justify-content-center bg-dark display">
+          <div class="container-fluid">
+            <nav class="navbar">
+              <a class="navbar-brand" href="#"><i class="fa fa-close ms-3" style="color: #fff"></i></a>
+              <h5 class="me-3 mt-2">Profile</h5>
+            </nav>
+            <div class="row bg-dark main-profile">
+              <div class="card border-0 bg-dark text-light d-flex align-items-center p-3 card-profil">
+                <img src="/assets/avatar.png" class="card-img-rounded mt-4 border border-5 border-dark img-profile" alt="you profile picture" style="width: 100px" />
+                <div class="card-body">
+                  <h5 class="name">Your Name</h5>
+                  <a
+                    href="https://www.google.co.id/maps/place/Yogyakarta,+Kota+Yogyakarta,+Daerah+Istimewa+Yogyakarta/@-7.803164,110.3398252,13z/data=!3m1!4b1!4m5!3m4!1s0x2e7a5787bd5b6bc5:0x21723fd4d3684f71!8m2!3d-7.7955699!4d110.3694892"
+                    target="_blank"
+                    class="card-text name-address"
+                    ><i class="fa fa-map-marker me-2"></i>Yogyakarta</a
+                  >
+                  <p class="card-text name-desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+              </div>
+            </div>
+            <div class="row d-flex justify-content-center">
+              <div class="col-10">
+                <div class="text-light purchases">
+                  <div class="card-body d-flex gap-4 justify-content-center">
+                    <div class="purchases-flow text-center">
+                      <span class="glyphicon glyphicon-usd"></span>
+                      <h5 class="card-title">To Pay</h5>
+                    </div>
+                    <!--  -->
+                    <div class="purchases-flow text-center">
+                      <i class="fa fa-truck"></i>
+                      <h5 class="card-title">To Ship</h5>
+                    </div>
+                    <div class="purchases-flow text-center">
+                      <i class="fa fa-handshake-o"></i>
+                      <h5 class="card-title">Received</h5>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row d-flex justify-content-center">
+              <div class="col-10 mt-4">
+                <div class="card border-0 text-light bg-dark">
                   <div class="card-body">
-                    <h5 class="card-title">Electronics</h5>
-                    <p class="card-text">Lorem, ipsum dolor.</p>
-                    <div class="btn-promo text-center">Go somewhere</div>
+                    <div class="text-left d-grid gap-3 profile-option">
+                      <h5 class="card-title mb-3"><i class="fa fa-id-badge me-2"></i>Edit My Profile</h5>
+                      <h5 class="card-title mb-3"><i class="fa fa-credit-card me-2"></i></i>My Voucher</h5>
+                      <h5 class="card-title mb-3"><i class="fa fa-search me-2"></i>Help Center</h5>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -73,11 +276,7 @@
           </div>
         </div>
       </div>
-      <!-- content-end -->
-
-      <!-- profile-bar-start -->
-      <div class="col" style="border: 1px solid blue">tes</div>
-      <!-- profile-bar-end -->
+      <!-- display-bar-end -->
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
