--- a/index.html
+++ b/index.html
@@ -13,22 +13,20 @@
     <div class="row m-2 gap-1">
       <!-- side-bar-start -->
       <div class="col-2 left-side">
-        <div class="mb-3" style="max-width: 540px; cursor: pointer">
-          <div class="row g-0 mt-2 ms-2">
-            <div class="col-4">
-              <img src="/assets/avatar.png" class="img-fluid rounded-start avatar" alt="avatar" />
-            </div>
-            <div class="col-8 mt-3">
-              <div class="card-body brand">
-                <h5 class="card-title brand-title"><span style="color: crimson">Farhan </span>Store</h5>
-                <p class="card-text brand-desc">Buy Everything</p>
+        <div class="container-fluid">
+            <div class="row g-0 mt-2">
+              <div class="col-4">
+                <img src="/assets/avatar.png" class="img-fluid rounded-start avatar" alt="avatar" />
+              </div>
+              <div class="col-8 mt-3">
+                <div class="card-body brand">
+                  <h5 class="card-title brand-title"><span style="color: crimson">Farhan </span>Store</h5>
+                  <p class="card-text brand-desc">Buy Everything</p>
+                </div>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col left-side-link-group">
-            <ul class="row me-3 mt-3 d-flex justify-content-start">
+          <div class="row mt-4">
+            <ul class="row mt-3 d-flex ms-0">
               <li class="left-side-link"><i class="fa fa-home me-2"></i>Dashboard</li>
               <li class="left-side-link"><i class="fa fa-clock-o me-2"></i>Activity</li>
               <li class="left-side-link"><i class="fa fa-user me-2"></i>Profile</li>
